# tabby

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yml  config.example.toml  launch.py  pyproject.toml
tabby/: __init__.py  api.py  bot.py  config.py  extract.py  level.py  local_api.py  schema.sql  util.py
tabby/api/: __init__.py  routes.py  session.py
tabby/ext/: __init__.py  autoroles.py  levels.py  meta.py  silly.py
tabby/resources/: __init__.py  rank.html
tabby/resources/static/: rank.css
tabby/resources/static/scripts/: autorole_actions.js  mobile_navbar.js  mobile_sidebar.js
tabby/resources/static/styles/: page.css  rank.css
tabby/resources/templates/: base.html  dashboard.html  docs.html  error.html  guild_autoroles.html  guild_dashboard.html  guild_leaderboard.html  guild_settings.html  home.html  macros.html  private.html  rank.css  rank.html
tabby/routing/: __init__.py  core.py  error_boundary.py  exceptions.py  extract.py  util.py
tabby/web/: __init__.py  common.py  endpoints.py  pages.py  routes.py  session.py  template.py
web/: .gitignore  package.json
web/src/components/: layout.tsx
web/src/pages/: _app.tsx  index.tsx
